# Api-learn

./: .env  .gitignore  Dockerfile  alembic.ini  main.py  package-lock.json  package.json  pyproject.toml
API/: .gitignore  users.py
API_functions/: __init__.py  users_functions.py
database-migration/: env.py
database-migration/versions/: 31cf8d3009f1_create_table_tasks.py  3bc60eb782d1_db_setup.py  4550be955b53_dbb_intialize.py  8f03529bc4e9_db_setup.py  c0d0a1282e61_change_column_name_timestamp_created_to_.py  dab632a81385_change_column_name_username_to_user_name.py  fdbcef644d6a_add_gender_column_to_users_table.py
db/: __init__.py  config.py  db.py
models/: __init__.py  model.py
