[tool.poetry]
name = "api-endpoints"
version = "0.0.1"
description = "Task management microservice"
authors = ["nithinn <nithinnmanickam@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pylint = "^3.0.3"
pydantic = "^2.5.3"
databases = {extras = ["postgresql"], version = "^0.8.0"}
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.scripts]
server="uvicorn main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
